[project]
name = "national_park_crew"
version = "0.1.0"
description = "national_park_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1",
]

[project.scripts]
national_park_crew = "national_park_crew.main:run"
run_crew = "national_park_crew.main:run"
train = "national_park_crew.main:train"
replay = "national_park_crew.main:replay"
test = "national_park_crew.main:test"
run_with_trigger = "national_park_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
