[project]
name = "national_park_crew"
version = "0.1.0"
description = "national_park_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1",
    "gradio>=5.29.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.2.0",
]

[project.scripts]
national_park_crew = "national_park_crew.main:run"
run_crew = "national_park_crew.main:run"
train = "national_park_crew.main:train"
replay = "national_park_crew.main:replay"
test = "national_park_crew.main:test"
run_with_trigger = "national_park_crew.main:run_with_trigger"
run_ui = "national_park_crew.app:launch"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=national_park_crew.planner_service --cov-report=term-missing --cov-fail-under=80"
